Blender does not display icons on loading some files #42303

Closed
opened 2014-10-19 20:36:37 +02:00 by Antonis Ryakiotakis · 5 comments

System Information
Linux

Blender Version
Broken: (example: 3a961d6
Worked: (optional) 2.72

Short description of error
Icons lost when opening certain files

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  • Open blender
  • Make a second blender window by duplicating a screen or a window
  • Close the first blender window
  • Save the file
  • Completely close blender
  • Try opening the file.
**System Information** Linux **Blender Version** Broken: (example: 3a961d6 Worked: (optional) 2.72 **Short description of error** Icons lost when opening certain files **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps * Open blender * Make a second blender window by duplicating a screen or a window * Close the first blender window * Save the file * Completely close blender * Try opening the file.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

This issue was referenced by blender/blender@308c4fc234

This issue was referenced by blender/blender@308c4fc234fce82b46ca03a27de7d9e0d69a7913
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Closed by commit blender/blender@308c4fc234.

Closed by commit blender/blender@308c4fc234.
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#42303
No description provided.